samples/_failures_safe/1761084547_0c586f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57f03abe.c: In function ‘main’:
./samples/SAFE/__tmp_57f03abe.c:130:9: error: expected declaration or statement at end of input
  130 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_57f03abe.c:130:9: error: expected declaration or statement at end of input
